[gd_scene load_steps=2 format=3 uid="uid://j2np82emqfk8"]

[ext_resource type="Script" path="res://lib/ui/touch_ui.gd" id="1_vqkvn"]

[node name="TouchUi" type="CanvasLayer"]
script = ExtResource("1_vqkvn")

[node name="JoystickRight" type="Control" parent="."]
layout_mode = 3
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -209.0
offset_top = -204.0
grow_horizontal = 0
grow_vertical = 0

[node name="Analog" type="TouchScreenButton" parent="JoystickRight"]
position = Vector2(-35, -33)
scale = Vector2(0.714894, 0.705628)
texture_normal = null

[node name="Stick" type="Sprite2D" parent="JoystickRight/Analog"]
position = Vector2(118.899, 114.791)
texture = null

[connection signal="pressed" from="JoystickRight/Analog" to="." method="_on_analog_right_pressed"]
[connection signal="released" from="JoystickRight/Analog" to="." method="_on_analog_right_released"]
